Deploy/k8s/userwebapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: userwebapi-deployment
  labels:
    app: userwebapi
spec:
  replicas: 1 
  selector:
    matchLabels:
      app: userwebapi
  template:
    metadata:
      labels:
        app: userwebapi
    spec:
      containers:
      - name: userwebapi
        image: amirdoosti/userwebapi:latest
        ports:
        - containerPort: 8001
      imagePullSecrets:
      - name: regcred

---
apiVersion: v1
kind: Service
metadata:
  name: userwebapi-service
spec:
  selector:
    app: userwebapi
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 8001
      targetPort: 8001
